--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Check repo out locally
-      - uses: actions/checkout@v2
+        uses: actions/checkout@v2
 
       - name: Install SSH Key
         uses: shimataro/ssh-key-action@v2
