--- a/.github/workflows/deploy_production.yml
+++ b/.github/workflows/deploy_production.yml
@@ -1,8 +1,6 @@
-name: CI
+name: Deploy to PRODUCTION
 
 on:
-  push:
-    branches: [ main, add-auto-deployment ]
   workflow_dispatch:
 
 jobs:
@@ -16,7 +14,7 @@ jobs:
         uses: shimataro/ssh-key-action@v2
         with:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
-          known_hosts: ${{ secrets.SSH_KNOWN_HOSTS_TEST }}
+          known_hosts: ${{ secrets.SSH_KNOWN_HOSTS_PRODUCTION }}
 
       - name: Deploy with rsync
-        run: rsync -avz -e 'ssh -p ${{ secrets.SSH_PORT_TEST }}' docs/ ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST_TEST }}:/var/www/html/dcat-ap-ch-def.clients.liip.ch
+        run: rsync -avz -e 'ssh -p ${{ secrets.SSH_PORT_PRODUCTION }}' docs/ ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST_PRODUCTION }}:/var/www/html/dcat-ap-ch
