Fix typo in path

--- a/.github/workflows/deploy_production.yml
+++ b/.github/workflows/deploy_production.yml
@@ -17,4 +17,4 @@ jobs:
           known_hosts: ${{ secrets.SSH_KNOWN_HOSTS_PRODUCTION }}
 
       - name: Deploy with rsync
-        run: rsync -avz -e 'ssh -p ${{ secrets.SSH_PORT_PRODUCTION }}' docs/ ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST_PRODUCTION }}:/var/www/dcat-ap-ch
+        run: rsync -avz -e 'ssh -p ${{ secrets.SSH_PORT_PRODUCTION }}' docs/ ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST_PRODUCTION }}:/var/www/dcat-ap.ch
